Db reworks